<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geeks4Geeks</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="heading">GeeksforGeeks</string>
    <string name="title_activity_activity__webviewer">Activity_Webviewer</string>
    <string name="click_here">Click Here</string>
    <string name="spinner1_title">Choose Category</string>
    <string name="spinner2_title">Choose Subtopic</string>
    <string name="spinner3_title">Choose Topic</string>
    <string name="select_category">Select Category</string>
    <string name="select_subtopic">Select Subtopic</string>
    <string name="select_topic">Select Topic</string>
    <string name="action_share">Share</string>
    <string name="go">Go!</string>

</resources>
